# tink-lite

./: Cargo.toml  README.md  TODO.txt  build.rs
src/: README.md  aead.rs  error.rs  lib.rs
src/algorithms/: aead.rs  mod.rs
src/codegen/: google.crypto.tink.rs  mod.rs
test_data/: aes_gcm_128_new.b64  aes_gcm_128_new.json  aes_gcm_128_old.b64  aes_gcm_128_old.json  aes_gcm_128_old_and_new_new_active.b64  aes_gcm_128_old_and_new_new_active.json  aes_gcm_128_old_and_new_old_active.b64  aes_gcm_128_old_and_new_old_active.json  aes_gcm_256_new.b64  aes_gcm_256_new.json  aes_gcm_256_old.b64  aes_gcm_256_old.json  aes_gcm_256_old_and_new_new_active.b64  aes_gcm_256_old_and_new_new_active.json  aes_gcm_256_old_and_new_old_active.b64  aes_gcm_256_old_and_new_old_active.json
