[package]
name = "tink-lite"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.21.7"
phf = { version = "0.11.2", features = ["macros"] }
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.196", features = ["derive", "std"] }

[build-dependencies]
prost-build = "0.12.3"
